[package]
name = "slack-verify"
version = "0.1.0"
authors = ["Kyung Mo Kweon <kkweon@gmail.com>"]
edition = "2018"

[dependencies]
rust-crypto = "0.2.36"         # A (mostly) pure-Rust implementation of various common cryptographic algorithms.
hex = "0.3.2"                 # Encoding and decoding data into/from hexadecimal representation.
