[package]
name = "slack-verify"
description = "Verify Slack requests"
documentation = "https://kkweon.github.io/slack-verify/"
homepage = "https://kkweon.github.io/slack-verify/"
repository = "https://github.com/kkweon/slack-verify"
version = "0.1.1"
authors = ["Kyung Mo Kweon <kkweon@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["authentication"]

[badges]
travis-ci = { repository = "kkweon/slack-verify" }
coveralls = { repository = "kkweon/slack-verify" }



[dependencies]
rust-crypto = "0.2.36"         # A (mostly) pure-Rust implementation of various common cryptographic algorithms.
hex = "0.3.2"                 # Encoding and decoding data into/from hexadecimal representation.
